#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.62)
AC_INIT(server1, 1.0, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([hash_map.cc])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(server1,1.0)
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

AC_PROG_RANLIB
# Checks for libraries.
# FIXME: Replace `main' with a function in `-levent':
AC_CHECK_LIB([event], [main])
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main])
AC_CHECK_LIB([stdc++], [main])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h stdint.h stdlib.h string.h sys/socket.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([bzero ftruncate gettimeofday memset socket strcasecmp strchr strerror strrchr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
